--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav {
+  background-color: #F55A5A;
+  color: #FFFFFF;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  width: 100%;
+  height: 55px; 
 }
 
-.App-link {
-  color: #61dafb;
+nav > img {
+  margin-right: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+
+.card--position {
+  position: relative;
+  left: 25%;
 }
+
+.card {
+  display: flex;
+  align-items: center;
+  margin: 50px;  
+  
+}
+
+.card--state {
+  display: block;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+.card--location {
+  display: flex;
+  align-items: center;
+  
+  
+}
+
+.card--location > h3 {
+  margin: 0 10px;
+}
+
+.card--content {
+  display: block;  
+}
+
+.card--content > h1, p {
+  margin-top: 10px;
+  width: 40%;
+}
+
